sql figured out, yay!
Signed-off-by: Sam Rackey <samrcr71@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<tr><td>Never gonna tell a lie and hurt you</td></tr>
 	</table>
 	
-	<li><a href="test.php">More...</a></li>
+	<li><a href="index.php">More...</a></li>
 
 </body>
 
