compare now displays a random category of the group along with the two people -this is fully random, and does not effect ranking -It works for all display (i.e. fun) purposes however
Signed-off-by: Sam Rackey <samrcr71@gmail.com>

--- a/public/compare.html
+++ b/public/compare.html
@@ -44,6 +44,7 @@
             </div>
 			
             <div id="middle">
+				<h2 id="view_c">C</h2>
 				<div class="form-group">
 					<button class="btn btn-default" onclick="compare(1);">
 						<h1 id="view_a">A</h1>
