Mostly integrated media into comparison process. -Several views reimplemented in JavaScript instead of PHP -Media is compared instead of users.
Signed-off-by: eagraf <graf.ethan@gmail.com>

--- a/public/insert.html
+++ b/public/insert.html
@@ -19,7 +19,7 @@
 		<script src="/js/media.js"></script>
 		
 		<script>
-			displayInsertTable();
+			displayInsertTable("middle");
 		</script>
 
 
@@ -44,6 +44,8 @@
 			
             <div id="middle">
 				<div id="media_table"></div>
+			</div>
+			
 		<div id="bottom">
 			Copyright <a href="about.php">RYEE</a> 2015
 		</div>
