Implemented Glicko2 rating system. -Total group score -Category  score -User totals score
Signed-off-by: eagraf <graf.ethan@gmail.com>

--- a/public/media.html
+++ b/public/media.html
@@ -19,7 +19,7 @@
 		<script src="/js/media.js"></script>
 		
 		<script>
-			displayInsertTable("middle");
+			displayTable("middle");
 		</script>
 
 
