-Redid most of board in js. -Simplified upload system.
Signed-off-by: eagraf <graf.ethan@gmail.com>

--- a/public/compare.html
+++ b/public/compare.html
@@ -41,7 +41,7 @@
 					<ul class="nav nav-tabs">
 						<a href="/"><img alt="StarBoard" src="/img/small_star_logo.png" align="left"/></a>
 						<li><a href="compare.html">Compare</a></li>
-						<li><a href="board.php">Board</a></li>
+						<li><a href="board.html">Board</a></li>
 						<li><a href="upload.php">Upload</a></li>
 						<li><a href="profile.php">Profile</a></li>
 						<li><a href="logout.php">Log Out</a></li>
