--- a/public/compare.html
+++ b/public/compare.html
@@ -43,7 +43,7 @@
 						<li><a href="compare.html">Compare</a></li>
 						<li><a href="board.html">Board</a></li>
 						<li><a href="upload.php">Upload</a></li>
-						<li><a href="profile.php">Profile</a></li>
+						<li><a href="profile.html">Profile</a></li>
 						<li><a href="logout.php">Log Out</a></li>
 					</ul>
 				</div>
