--- a/public/profile.html
+++ b/public/profile.html
@@ -35,9 +35,9 @@
 					<ul class="nav nav-tabs">
 						<a href="/"><img alt="StarBoard" src="/img/small_star_logo.png" align="left"/></a>
 						<li><a href="compare.html">Compare</a></li>
-						<li><a href="board.php">Board</a></li>
+						<li><a href="board.html">Board</a></li>
 						<li><a href="upload.php">Upload</a></li>
-						<li><a href="profile.php">Profile</a></li>
+						<li><a href="profile.html">Profile</a></li>
 						<li><a href="logout.php">Log Out</a></li>
 					</ul>
 				</div>
