Began working on implementing embed and link object types.
Signed-off-by: eagraf <graf.ethan@gmail.com>

--- a/public/profile.html
+++ b/public/profile.html
@@ -36,7 +36,7 @@
 						<a href="/"><img alt="StarBoard" src="/img/small_star_logo.png" align="left"/></a>
 						<li><a href="compare.html">Compare</a></li>
 						<li><a href="board.html">Board</a></li>
-						<li><a href="upload.php">Upload</a></li>
+						<li><a href="upload.html">Upload</a></li>
 						<li><a href="profile.html">Profile</a></li>
 						<li><a href="logout.php">Log Out</a></li>
 					</ul>
