--- a/public/media/upload.html
+++ b/public/media/upload.html
@@ -4,22 +4,29 @@
 
 	</head>
 		<!-- http://getbootstrap.com/ -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="../css/bootstrap.min.css" rel="stylesheet"/>
 
-        <link href="/css/style.css" rel="stylesheet"/>
+        <link href="../css/style.css" rel="stylesheet"/>
 
-        <title>Star: Compare</title>
+        <title>StarBoard</title>
 	
 		<!-- https://jquery.com/ -->
-        <script src="/js/jquery-1.11.3.min.js"></script>
+        <script src="../js/jquery-1.11.3.min.js"></script>
 
         <!-- http://getbootstrap.com/ -->
-        <script src="/js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
 		
-		<script src="/js/upload.js"></script>
+		<script src="../js/upload.js"></script>
 		
-		<script src="/js/media.js"></script>
-
+		<script src="../js/media.js"></script>
+		
+		<script>
+			//Load header and footer.
+			jQuery(document).ready(function(){
+			   $('#top').load('../common/header.html');
+			   $('#bottom').load('../common/footer.html');
+		    });
+		</script>
 
     </head>
 
@@ -27,18 +34,7 @@
 
         <div class="container">
 
-            <div id="top">
-				<div id="nav">
-					<ul class="nav nav-tabs">
-						<a href="/"><img alt="StarBoard" src="/img/small_star_logo.png" align="left"/></a>
-						<li><a href="compare.html">Compare</a></li>
-						<li><a href="board.html">Board</a></li>
-						<li><a href="upload.html">Upload</a></li>
-						<li><a href="profile.html">Profile</a></li>
-						<li><a href="logout.php">Log Out</a></li>
-					</ul>
-				</div>
-            </div>
+            <div id="top"> </div>
 			
             <div id="middle">
 				<div id="nav">
